fix jumping button

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -308,6 +308,23 @@ video {
     opacity: 0.25;
 }
 
+.interLabel {
+    padding: 15px 0;
+    margin-top: 20px;
+    margin-left: 30px;
+    margin-right: 30px;
+    height: 50px;
+    font-size: 18px !important;
+    background: #FFFFFF;
+    box-shadow: 2px 2px 10px 1px rgba(226, 226, 226, 0.82);
+    border-radius: 8px;
+    font-weight: bold;
+    letter-spacing: 3px !important;
+    text-align: center;
+    letter-spacing: 0.01em;
+    text-transform: uppercase;
+}
+
 .changeQw {
     margin: 20px;
 }
